--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,8 @@ services:
   nginx:
     container_name: nginx
     build: ./nginx
+    depends_on: 
+      - user-service
     ports: 
       - "8080:80"
 
@@ -21,14 +23,16 @@ services:
       - "8080"
     environment:
       - ENV=dev
-      - MONGO_HOST=user-mongo
+      - MONGO_HOST=user-service-mongo
       - MONGO_PORT=27017
     volumes:
       - ./user-service:/go/src/app
-    command: reflex -r "\.go$$" -s -- sh -c "go run ./"
+    depends_on: 
+      - user-service-mongo
+    command: ./wait-for.sh user-service-mongo:27017 -- reflex -r "\.go$$" -s -- sh -c "go run ./"
 
-  user-mongo:
-    container_name: user-mongo
+  user-service-mongo:
+    container_name: user-service-mongo
     image: mongo
     volumes: 
       - "mongo_data:/data/db"
@@ -42,6 +46,6 @@ services:
     ports:
       - "8081:8081"
     environment:
-      - ME_CONFIG_MONGODB_SERVER=user-mongo
+      - ME_CONFIG_MONGODB_SERVER=user-service-mongo
     depends_on: 
-      - user-mongo
+      - user-service-mongo
