--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ MONGO_HOST=user-service-mongo
 MONGO_PORT=27017
 MONGO_DABASE_NAME=users
 USERS_COLLECTION=users
+
+ACCESSTOKEN_SECRET=secret
+ACCESSTOKEN_EXPIRATION=600
