--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,6 @@
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
-*.code-workspace
+# *.code-workspace
 
 # End of https://www.toptal.com/developers/gitignore/api/vscode,go
