--- a/.env
+++ b/.env
@@ -3,6 +3,9 @@ MONGO_PORT=27017
 MONGO_DABASE_NAME=users
 USERS_COLLECTION=users
 
+REDIS_HOST=user-service-redis
+REDIS_PORT=6379
+
 ACCESSTOKEN_SECRET=accessSecret
 ACCESSTOKEN_EXPIRATION=600
 REFRESHTOKEN_SECRET=refreshSecret
