--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-MONGO_HOST=user-service-mongo
+MONGO_HOST=mongo
 MONGO_PORT=27017
 MONGO_DABASE_NAME=users
 USERS_COLLECTION=users
 
-REDIS_HOST=user-service-redis
+REDIS_HOST=redis
 REDIS_PORT=6379
 
 ACCESSTOKEN_SECRET=accessSecret
