--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,4 +7,11 @@ server {
         proxy_set_header Host $http_host;
         proxy_redirect off;
     }
+
+    location /api/tsodd {
+        proxy_pass http://tsodd-service:8080;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $http_host;
+        proxy_redirect off;
+    }
 }
