--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -41,6 +41,8 @@ services:
     image: gradle:6.8.3-jdk11
     volumes: 
       - ./tsodd-service:/app
+    env_file: 
+      - .env
     expose: 
       - 8080
     working_dir: /app
