--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,19 @@ services:
     ports: 
       - "8080:80"
 
+  frontend:
+    container_name: frontend
+    build: 
+      context: ./frontend
+      dockerfile: Dockerfile
+    volumes: 
+      - ./frontend:/app
+      - /app/node_modules
+    expose: 
+      - "3000"
+    environment: 
+      - CHOKIDAR_USEPOLLING=true
+
   user-service:
     container_name: user-service
     build:
