--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,17 +1,36 @@
+upstream frontend {
+    least_conn;
+    server frontend:3000 max_fails=3 fail_timeout=30s;
+}
 server {
     listen 80;
 
-    location /api/users {
+    location / {
+        proxy_pass http://frontend/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+        break;
+    }
+
+    location ~ /api/users(?<url>.*) {
         proxy_pass http://user-service:8080;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $http_host;
         proxy_redirect off;
     }
 
-    location /api/tsodd {
+    location ~ /api/tsodd(?<url>.*) {
         proxy_pass http://tsodd-service:8080;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $http_host;
         proxy_redirect off;
+    }
+
+    location /health-check {
+        return 200;
+        access_log off;
     }
 }
