--- a/tsodd-service/build.gradle
+++ b/tsodd-service/build.gradle
@@ -14,11 +14,19 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'org.liquibase:liquibase-core'
+
+	compile "org.hibernate:hibernate-core:5.4.31.Final"
+    compile "org.hibernate:hibernate-spatial:5.4.31.Final"	
 	compile 'javax.xml.bind:jaxb-api:2.1'
+
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 test {
