Add env variables for tsodd service

--- a/.env
+++ b/.env
@@ -10,3 +10,9 @@ ACCESS_TOKEN_SECRET=accessSecret
 ACCESS_TOKEN_EXPIRATION=600
 REFRESH_TOKEN_SECRET=refreshSecret
 REFRESH_TOKEN_EXPIRATION=129600
+
+POSTGIS_TSODD_HOST=postgis
+POSTGIS_TSODD_PORT=5432
+POSTGIS_TSODD_DATABASE=tsodd-service
+POSTGIS_TSODD_USER=postgres
+POSTGIS_TSODD_PASSWORD=postgres
