--- a/tsodd-service/src/main/resources/application.properties
+++ b/tsodd-service/src/main/resources/application.properties
@@ -1,11 +1,10 @@
 spring.jpa.database-platform=org.hibernate.spatial.dialect.postgis.PostgisDialect
+spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://postgis-tsodd:5432/tsodd-service
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://${POSTGIS_TSODD_HOST}:${POSTGIS_TSODD_PORT}/${POSTGIS_TSODD_DATABASE}
+spring.datasource.username=${POSTGIS_TSODD_USER}
+spring.datasource.password=${POSTGIS_TSODD_PASSWORD}
 
-spring.liquibase.change-log=classpath:db/changelog/db.changelog-main.xml
-spring.liquibase.url=jdbc:postgresql://postgis-tsodd:5432/tsodd-service
-spring.liquibase.user=postgres
-spring.liquibase.password=postgres
+jwt.token.secret=${ACCESS_TOKEN_SECRET}
+jwt.token.expired=${ACCESS_TOKEN_EXPIRATION}
