--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,14 +8,15 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap-4-react": "0.0.59",
+    "leaflet": "^1.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-jwt": "^1.1.2",
+    "react-leaflet": "^3.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.1",
-    "leaflet": "^1.7.1",
-    "react-leaflet": "^3.1.0",
-    "react-sidebar": "^3.0.2"
+    "react-sidebar": "^3.0.2",
+    "web-vitals": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
