--- a/tsodd-service/src/main/resources/application.yaml
+++ b/tsodd-service/src/main/resources/application.yaml
@@ -11,3 +11,7 @@ spring:
   data:
     rest:
       base-path: api/tsodd/v1
+jwt:
+  token:
+    secret: ${ACCESS_TOKEN_SECRET:accessTokenSecret}
+    expired: ${ACCESS_TOKEN_EXPIRATION:600}
