Dockerize uds service

--- a/.env
+++ b/.env
@@ -11,8 +11,14 @@ ACCESS_TOKEN_EXPIRATION=600
 REFRESH_TOKEN_SECRET=refreshSecret
 REFRESH_TOKEN_EXPIRATION=129600
 
-POSTGIS_TSODD_HOST=postgis
+POSTGIS_TSODD_HOST=postgis-tsodd
 POSTGIS_TSODD_PORT=5432
 POSTGIS_TSODD_DATABASE=tsodd-service-database
 POSTGIS_TSODD_USER=postgres
 POSTGIS_TSODD_PASSWORD=postgres
+
+POSTGIS_UDS_HOST=postgis-uds
+POSTGIS_UDS_PORT=5432
+POSTGIS_UDS_DATABASE=uds-service-database
+POSTGIS_UDS_USER=postgres
+POSTGIS_UDS_PASSWORD=postgres
