--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -29,6 +29,13 @@ server {
         proxy_redirect off;
     }
 
+    location ~ /api/uds(?<url>.*) {
+        proxy_pass http://uds-service:8080;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $http_host;
+        proxy_redirect off;
+    }
+
     location /health-check {
         return 200;
         access_log off;
