Add Swagger ui to uds

--- a/uds-service/src/main/resources/application.yaml
+++ b/uds-service/src/main/resources/application.yaml
@@ -13,3 +13,11 @@ spring:
   data:
     rest:
       base-path: api/uds
+
+springfox:
+  documentation:
+    swaggerUi:
+      baseUrl: /api/uds
+    swagger:
+      v2:
+        path: /api/uds/api-docs
